# caie-code-installer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: constants.rs  funcs.rs  main.rs  ui.rs
src/scripts/: install.bat  install.sh  linux-install.sh  macos-install.sh  windows-install.bat
