[package]
name = "caie-code-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
strip = true

[dependencies]
eframe = "0.26.2"
egui-notify = "0.13.0"
egui_extras = { version = "0.26.2", features = ["all_loaders"] }
image = { version = "0.24.9", features = ["png"] }
lazy_static = "1.4.0"
